# MASLab

./: .gitignore  README.md  REFACTORING.md  evaluate.py  inference.py  main.py  mas_datasets_config.py  pyproject.toml  tmp_test_async_mas.py
_methods_unsafe/macnet/configs/: config_main.yaml
datasets/: build_test_dataset.py
evaluations/: __init__.py  evaluate_xverify.py
experiments/: experiments.yaml  run_matrix.py
methods/: __init__.py  utils.py
methods/agentverse/: agentverse_humaneval.py  agentverse_main.py  agentverse_mgsm.py
methods/agentverse/configs/: config_humaneval.yaml  config_humaneval_mcp_all.yaml  config_humaneval_mcp_partial.yaml  config_main.yaml  config_mcp_all.yaml  config_mcp_partial.yaml  config_mgsm.yaml  config_mgsm_mcp_all.yaml  config_mgsm_mcp_partial.yaml
methods/camel/: camel_main.py
methods/camel/configs/: config_main.yaml  config_mcp.yaml
methods/cot/: cot_main.py
methods/cot/configs/: config_main.yaml  config_mcp.yaml  config_mcp_debug.yaml
methods/dylan/: dylan_humaneval.py  dylan_main.py  dylan_math.py  dylan_mmlu.py  utils_humaneval.py  utils_mmlu.py
methods/dylan/configs/: config_humaneval.yaml  config_humaneval_mcp_all.yaml  config_humaneval_mcp_partial.yaml  config_main.yaml  config_math.yaml  (+4 more)
methods/llm_debate/: llm_debate_main.py
methods/mad/: mad_main.py
methods/mas_base/: mas_base.py
methods/mav/: mav_gpqa.py  mav_humaneval.py  mav_main.py  mav_math.py  mav_mmlu.py  util.py
methods/self_consistency/: self_consistency_main.py
results/: create_tables.py
utils/: __init__.py  logging.py  utils.py
(+8 files in other folders)
